# advent-of-code-2021

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: 2021.yml  2022.yml  cmake.yml
2015-csharp/: .gitignore  2015-csharp.sln  aoc_cookie.example  generate_day
2015-csharp/AOC2015/: CommandLineException.cs  Day.cs  Program.cs  RunOptions.cs  Runner.cs
2015-csharp/AOC2015.Tests/: AOC2015.Tests.csproj  Day00.cs.template  Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs
2015-csharp/aoc2015/: aoc2015.sln
2021-ruby/day-01/: depth_scanner.rb  main-b.rb
2021-ruby/day-02/: main-a.rb
2021-ruby/day-03/: diagnostic_report.rb  main-a.rb  main-b.rb
2021-ruby/day-04/: README.md  main-a.rb  main-b.rb
2021-ruby/day-05/: main-a.rb
2021-ruby/day-06/: README.md  main-a.rb  main-b.rb
2022-cpp/: .natvis  CMakeLists.txt
2022-cpp/aoc2022/: CMakeLists.txt  README-day-01.md  README-day-02.md  README-day-03.md  README-day-04.md  README-day-05.md  README-day-06.md  README-day-07.md  README-day-08.md  README-day-09.md  README-day-10.md  README-day-11.md  README-day-12.md  README-day-13.md  README-day-14.md  README-day-15.md  README-day-16.md  README-day-17.md  README-day-18.md  README-day-19.md  README-day-20.md  README-day-21.md  README-day-22.md  main.cpp
2022-cpp/aoc2022/include/: day-01.h  day-02.h  day-03.h  day-04.h  day-05.h  day-06.h  day-07.h  day-08.h  day-09.h  day-10.h  day-11.h  day-12.h  day-13.h  day-14.h  day-15.h  day-16.h  day-17.h  day-18.h  day-19.h  day-20.h  day-21.h  day-22.h  day-23.h  day-24.h  day-25.h  days.h
2022-cpp/aoc2022/src/: CMakeLists.txt  day-01.cpp  day-02.cpp  day-03.cpp  day-04.cpp  day-05.cpp  day-06.cpp  day-07.cpp  day-08.cpp  day-09.cpp  day-10.cpp  day-11.cpp  day-12.cpp  day-13.cpp  day-14.cpp  day-15.cpp  day-16.cpp  day-17.cpp  day-18.cpp  day-19.cpp  day-20.cpp  day-21.cpp  day-22.cpp  day-23.cpp  day-24.cpp  day-25.cpp
2022-cpp/aoc2022/tests/: CMakeLists.txt  day-01-test.cpp  day-02-test.cpp  day-03-test.cpp  day-04-test.cpp  day-05-test.cpp  day-06-test.cpp  day-07-test.cpp  day-08-test.cpp  day-09-test.cpp  day-10-test.cpp  day-11-test.cpp  day-12-test.cpp  day-13-test.cpp  day-14-test.cpp  day-15-test.cpp  day-16-test.cpp  day-17-test.cpp  day-18-test.cpp  day-19-test.cpp  day-20-test.cpp  day-21-test.cpp  day-22-test.cpp  day-23-test.cpp  day-24-test.cpp  day-25-test.cpp  framework-test.cpp
2022-cpp/common/: CMakeLists.txt  README.md  aoc2022.cpp  aoc2022.h
2022-cpp/day-01/: CMakeLists.txt  README.md  main.cpp
2022-cpp/day-01/tests/: CMakeLists.txt  test.cpp
2022-cpp/utility/: CMakeLists.txt  cpu_10.cpp  cpu_10.h  cpu_10_test.cpp  pathfinder.cpp  pathfinder.h  pathfinder_test.cpp  utility.cpp  utility.h  utility_test.cpp
2022-js/: .aocrunner.json  README.md  package.json
2023-go/: aoc2023.go  go.mod  go.sum  go.work  go.work.sum
day-01/: Gemfile  README.md  depth_scanner.rb  main-a.rb
day-02/: README.md  main-a.rb  submarine.rb
day-03/: README.md  diagnostic_report.rb  main-a.rb
day-04/: README.md  main-a.rb
day-05/: README.md  main-a.rb
day-06/: README.md  lanternfish_simulator.rb
day-07/: README.md
day-08/: README.md  main-a.rb  seven_segment_decoder.rb
day-09/: README.md  height_map.rb  main-a.rb  main-b.rb
day-10/: README.md  syntax_parser.rb
day-11/: README.md  game.rb  main-a.rb  octopus.rb
day-12/: README.md  main-a.rb  main-b.rb
day-13/: README.md  main-a.rb  origami.rb  origami_parser.rb
day-14/: README.md  polymerizer.rb
day-15/: cave_navigator.rb  main-a.rb
day-16/: README.md  bitstream.rb  main.rb  packet.rb  packet_processor.rb  test.rb
day-17/: README.md  probe.rb  probe_launcher.rb
day-18/: README.md  main.rb  snailfish_number.rb
day-19/: README.md  main.rb  recombobulator.rb
day-20/: README.md  image_enhancer.rb  infinite_image.rb  main.rb
day-21/: README.md  main-b.rb
day-22/: README.md  main.rb  reactor_core.rb
day-23/: README.md  heap.rb  solver.rb
day-24/: Gemfile  alu.rb  main.rb
(+304 files in other folders)
